--- a/src/app/pages/services/A-B/as-built/as-built.component.html
+++ b/src/app/pages/services/A-B/as-built/as-built.component.html
@@ -7,20 +7,17 @@
     <!-- Tarjeta 1 -->
     <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
         <div class="contenido-texto">
-            <h2>Cuales son los beneficios de implementar una Documentacion Ejecutiva en tus proyectos</h2>
-            <p class="descripcion-breve">Implementar una Documentación Ejecutiva en tus proyectos ofrece una serie de
+            <h2>Cuales son los beneficios de implementar una As Built en tus proyectos</h2>
+            <p class="descripcion-breve">Implementar una As Built en tus proyectos ofrece una serie de
                 beneficios clave.</p>
             <div class="informacion-adicional">
-                <p>Proporciona
-                    planos detallados y precisos, lo que facilita la ejecución de la obra, y permite una colaboración
-                    estrecha
-                    con el cliente para garantizar que se cumplan sus requerimientos. Además, facilita las
-                    presentaciones
-                    ante
-                    entes reguladores al contar con documentación clara y completa, y optimiza el tiempo y los recursos
-                    al
-                    tener
-                    una documentación más eficiente y fácil de seguir.</p>
+                <p>Los modelos As Built en BIM ofrecen una representación precisa de las estructuras tal como se
+                    construyeron, lo que es esencial para la gestión eficaz del mantenimiento y operaciones
+                    post-construcción. Facilitan las actualizaciones o renovaciones futuras al proporcionar detalles
+                    exactos y actualizados del edificio. Además, mejoran la comunicación con los equipos de
+                    mantenimiento, aseguran el cumplimiento de las normativas de seguridad y eficiencia, y pueden ser
+                    fundamentales para la planificación de la evacuación y respuesta a emergencias. Estos modelos son
+                    herramientas valiosas para maximizar la longevidad y funcionalidad del edificio.</p>
                 <!-- Agrega más contenido aquí según sea necesario -->
             </div>
             <div class="ver-mas" onclick="toggleInfo(this.parentElement)">
@@ -28,57 +25,3 @@
             </div>
         </div>
     </div>
-
-    <!-- Tarjeta 2 -->
-    <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
-        <div class="contenido-texto">
-            <h2>Lo que ofrecemos</h2>
-            <p class="descripcion-breve">Ofrecemos dibujo BIM Revit graficando conceptos de diseño arquitectónico,
-                estructural y MEP en planos 2D
-                y modelos 3D detallados y más precisos para las diferentes etapas de un proyecto.</p>
-            <div class="informacion-adicional">
-                <ul>
-                    <li>Creación de idea.</li>
-                    <li>Presentaciones ante entes reguladores.</li>
-                    <li>Documentaciones ejecutivas.</li>
-                </ul>
-            </div>
-            <div class="ver-mas" onclick="toggleInfo(this.parentElement)">
-                <i class="fas fa-plus"></i>
-            </div>
-        </div>
-    </div>
-
-    <!-- Tarjeta 3 -->
-    <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
-        <div class="contenido-texto">
-            <h2>Procesos de trabajo</h2>
-            <p class="descripcion-breve">Nuestro equipo colabora estrechamente con los clientes</p>
-            <div class="informacion-adicional">
-                <p>para crear planos de planta, elevaciones,
-                    diseños
-                    estructurales e integración de sistemas utilizando el software Revit y AutoCAD.</p>
-                <!-- Agrega más contenido aquí según sea necesario -->
-            </div>
-            <div class="ver-mas" onclick="toggleInfo(this.parentElement)">
-                <i class="fas fa-plus"></i>
-            </div>
-        </div>
-    </div>
-
-    <div class="tarjeta" #tarjeta4 (click)="toggleInfo(tarjeta4)">
-        <div class="contenido-texto">
-            <h2>Software</h2>
-            <p class="descripcion-breve">Herramientas o programas utilizados</p>
-            <div class="informacion-adicional">
-                <ul class="cont">
-                    <li>Revit</li>
-                    <li>AutoCAD</li>
-                </ul>
-            </div>
-            <div class="ver-mas" onclick="toggleInfo(this.parentElement)">
-                <i class="fas fa-plus"></i>
-            </div>
-        </div>
-    </div>
-</div>
