--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -12,7 +12,7 @@
             <div class="col-xs-6 col-md-3">
                 <h6>Servicios</h6>
                 <ul class="footer-links">
-                    <li><a href="A-S">As Built</a></li>
+                    <li><a href="A-B">As Built</a></li>
                     <li><a href="B-A">BIM Arquitectonico</a></li>
                     <li><a href="B-E">BIM Estructural</a></li>
                     <li><a href="D-C">Deteccion de Conflictos</a></li>
@@ -41,9 +41,12 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a class="facebook" href="https://www.instagram.com/dsp_bim/"><i
+                                class="fa-brands fa-instagram"></i></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/company/dsp-bim"><i
+                                class="fa-brands fa-linkedin"></i></a></li>
                     <li><a class="twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+
                 </ul>
             </div>
         </div>
