--- a/src/app/pages/proyecto/proyecto.component.html
+++ b/src/app/pages/proyecto/proyecto.component.html
@@ -3,10 +3,13 @@
         <div class="project-image">
             <img [src]="proyecto.imagenUrl" alt="{{ proyecto.nombre }}">
         </div>
+        
         <div class="project-info">
+
             <!-- Añade la clase para animación aquí -->
-            <div class="content-animation project-info-content" [ngClass]="{'content-hidden': contentHidden}">
-                <h2>{{ tituloActual }}</h2>
+            <div class="content-animation project-info-content" [ngClass]="{'content-hidden': contentHidden}">                
+                <h3 style="">{{this.proyecto.nombre}}</h3>
+                <h2>{{ tituloActual }} </h2> 
                 <div class="project-description">
                     <p>{{ contenidoActual }}</p>
                 <div *ngIf="indiceDetalleActual === 2">
@@ -17,7 +20,7 @@
                 </div>
             </div>
             <div class="project-navigation">
-                <a (click)="cambiarContenido()">
+                <a class="flecha" (click)="cambiarContenido()">
                     <i class="fa-solid fa-right-long"></i> <!-- Utiliza Font Awesome o una imagen -->
                 </a>
             </div>
