--- a/src/app/pages/proyecto/proyecto.component.html
+++ b/src/app/pages/proyecto/proyecto.component.html
@@ -8,7 +8,7 @@
 
             <!-- Añade la clase para animación aquí -->
             <div class="content-animation project-info-content" [ngClass]="{'content-hidden': contentHidden}">                
-                <h3 style="">{{this.proyecto.nombre}}</h3>
+                <h3>{{this.proyecto.nombre}}</h3>
                 <h2>{{ tituloActual }} </h2> 
                 <div class="project-description">
                     <p>{{ contenidoActual }}</p>
